--- a/RazorIntro/Views/Home/Index.cshtml
+++ b/RazorIntro/Views/Home/Index.cshtml
@@ -2,30 +2,76 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+</head>
+<body>
+    @{
+        string year, day, month, time;
+        year = DateTime.Now.Year.ToString();
+        day = DateTime.Now.DayOfWeek.ToString();
+        month = DateTime.Now.Month.ToString();
+        time = DateTime.Now.ToShortTimeString();
+    }
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    <h5>Current Year: @year</h5>
+    <h5>Current Day : @day</h5>
+    <h5>Current Month: @month</h5>
+    <h5>Current Time: @time</h5>
+
+    @{ 
+        for (int i = 0; i < 6; i++)
+        {
+            <h4> Console.WriteLine("Hello world");</h4>
+            @* Use h4 to print console writelines *@
+
+        }
+    }
+
+   
+        @* Single Line Statements *@
+        @{var message = "I am Single Line Statements"; }
+            @* Inline Markup *@
+            <h5>The message is : @message</h5>
+        @* Use h5 to print console writelinesto print messages with a variable *@
+        @*var is a string which is referanced in <h5>*@
+
+        @* This is Code Block *@
+        @{
+            var num1 = 5;
+            var num2 = 10;
+            var result = num1 + num2;
+        }
+        @* Inline Markup *@
+        <h5>Sum of @num1 + @num2 = @result</h5>
+    @* Use h5 to print console writelinesto print messages with a variable *@
+
+    @{
+        <h5>Url : @Request.Url</h5>
+        <h5>File Path : @Request.FilePath</h5>
+        <h5>Location : @Request.MapPath(Request.FilePath)</h5>
+        <h5>Request Type : @Request.RequestType</h5>
+    }
+
+    @{
+        string message1 = " ";
+        int j = 5;
+        if (j < 5)
+        {
+            message1 = "It is less than 5";
+        }
+        else
+        {
+            message1 = "It is greater than 5";
+        }
+    }
+        <h6>@message1</h6>
+    @{ 
+        string name = "John";
+        int age = 20;
+        <h5>My name is @name and I am @age years old.</h5>
+    }
+</body>
+</html>
